Fixes #6138, allow wrapping for white-space in code elements (#6198)

--- a/kuma/static/styles/components/compat-tables/_bc-table.scss
+++ b/kuma/static/styles/components/compat-tables/_bc-table.scss
@@ -119,10 +119,6 @@ table.bc-table {
     border-right: $bc-border-width-thick solid $bc-border-color;
     border-left: 0;
     text-align: left;
-
-    code {
-        white-space: nowrap;
-    }
 }
 
 /* td
